name:                mdb
version:             0.1.0.0
synopsis:            Media Database
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Matthias Treydte
maintainer:          mt@waldheinz.de
-- copyright:
-- category:
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

data-files:
    files/htdocs/css/*.css
    files/htdocs/css/*.min.css
    files/htdocs/js/*.min.js
    files/htdocs/js/*.js
    files/templates/*.tpl
    files/sql/*.sql

executable mdb
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -with-rtsopts=-N
  -- other-modules:
  -- other-extensions:
  build-depends:
     base >=4.6,
     aeson,
     base16-bytestring,
     blaze-builder,
     bytestring    >= 0.10,
     conduit,
     conduit-extra,
     cookie,
     directory     >= 1.2,
     either,
     exceptions,
     filepath      >= 1.3,
     ffmpeg-light  >= 0.8,
     generic-aeson,
     heist,
     http-conduit,
     http-types,
     imagemagick,
     json-schema,
     mime-types,
     monad-control,
     mtl,
     optparse-applicative,
     process,
     pureMD5,
     regex-posix,
     resource-pool,
     rest-core,
     rest-wai,
     scrypt,
     SHA           >= 1.6,
     sqlite-simple >= 0.4,
     text          >= 0.11,
     transformers,
     transformers-base,
     unix,
     utf8-string,
     vault,
     wai,
     wai-app-static,
     wai-extra,
     wai-predicates,
     wai-routing,
     wai-session,
     wai-websockets,
     warp,
     websockets,
     xml

  hs-source-dirs:      src
  default-language:    Haskell2010
