name:                mdb
version:             0.1.0.0
synopsis:            Media Database
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Matthias Treydte
maintainer:          mt@waldheinz.de
-- copyright:
-- category:
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

data-files:
    files/htdocs/index.html
    files/htdocs/res/css/*.css
    files/htdocs/res/css/*.min.css
    files/htdocs/res/js/*.min.js
    files/htdocs/res/js/*.all.min.js
    files/htdocs/res/js/*.js
    files/sql/*.sql

library
    default-language:   Haskell2010
    hs-source-dirs:     src/lib
    ghc-options:        -Wall -O2
    exposed-modules:
        Paths_mdb
        Mdb.Album
        Mdb.CmdLine
        Mdb.Database
        Mdb.Database.Album
        Mdb.Database.File
        Mdb.Database.Person
        Mdb.Database.User
        Mdb.File
        Mdb.Image
        Mdb.Serve
        Mdb.Serve.Auth
        Mdb.Serve.Image
        Mdb.Serve.Resource.Album
        Mdb.Serve.Resource.File
        Mdb.Serve.Resource.Person
        Mdb.Serve.Resource.Serial
        Mdb.Serve.Resource.User
        Mdb.Serve.Resource.Utils
        Mdb.Serve.RestApi
        Mdb.Serve.Thumbs
        Mdb.Serve.TranscodeSpec
        Mdb.Serve.Utils
        Mdb.Serve.Video
        Mdb.Status
        Mdb.TvShow
        Mdb.Types

    build-depends:
        base >=4.6,
        aeson,
        attoparsec,
        base16-bytestring,
        blaze-builder,
        bytestring    >= 0.10,
        bytestring-conversion,
        conduit,
        conduit-extra,
        cookie,
        directory     >= 1.2,
        either,
        exceptions,
        filepath      >= 1.3,
        ffmpeg-light  >= 0.8,
        generic-aeson,
        http-conduit,
        http-types,
        imagemagick,
        json-schema,
        mime-types,
        monad-control,
        monad-logger,
        mtl,
        optparse-applicative,
        process,
        pureMD5,
        regex-posix,
        resource-pool,
        rest-core      >= 0.39,
        rest-wai,
        scrypt,
        SHA           >= 1.6,
        sqlite-simple >= 0.4,
        text          >= 0.11,
        time,
        transformers,
        transformers-base,
        unix,
        utf8-string,
        vault,
        wai,
        wai-app-static,
        wai-extra,
        wai-predicates,
        wai-routing,
        wai-session,
        warp,
        xml

executable mdb
    main-is:             Main.hs
    ghc-options:         -O2 -Wall -threaded -with-rtsopts=-N
    hs-source-dirs:      src/main
    default-language:    Haskell2010
    build-depends:
        base,
        bytestring,
        directory,
        exceptions,
        ffmpeg-light,
        imagemagick,
        mdb,
        monad-logger,
        scrypt

executable mdb-api-gen
    main-is:            RestApiMain.hs
    hs-source-dirs:     src/main
    default-language:   Haskell2010
    build-depends:
        base,
        mdb,
        rest-gen
